# LaboratorioProg

./: CMakeLists.txt  README.md  day.cpp  day.h  dayview.cpp  dayview.h  dayview.ui  event.cpp  event.h  giorno.cpp  giorno.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tester.cpp  tester.h
